[tool.poetry]
name = "tp"
version = "0.1.0"
description = ""
authors = ["omaraouachri <omaraouachri4800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.1"
scikit-learn = "1.3.2"
pandas = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
